fix Fox's header on mobile

--- a/src/app/components/stream.component.css
+++ b/src/app/components/stream.component.css
@@ -228,6 +228,9 @@ h3 {
   .second-staff {
     display: none;
   }
+  .third-staff {
+    display: none;
+  }
   .mobile-staff {
     display: table;
     width: 100%;
